[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/tumble/tumble_hud.gd" id="1_hud"]

[node name="TumbleHud" type="CanvasLayer"]
script = ExtResource("1_hud")

[node name="TopBar" type="HBoxContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_constants/separation = 20

[node name="BackButton" type="Button" parent="TopBar"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(80, 0)
text = "Menu"

[node name="CurrencyIcon" type="Label" parent="TopBar"]
layout_mode = 2
text = "Coins:"

[node name="CurrencyLabel" type="Label" parent="TopBar"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="Spacer" type="Control" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HeightLabel" type="Label" parent="TopBar"]
unique_name_in_owner = true
layout_mode = 2
text = "Height: 0"

[node name="MaxHeightLabel" type="Label" parent="TopBar"]
unique_name_in_owner = true
layout_mode = 2
text = "Best: 0"

[node name="BlockCountLabel" type="Label" parent="TopBar"]
unique_name_in_owner = true
layout_mode = 2
text = "Blocks: 0"

[node name="CollapseLabel" type="Label" parent="."]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -30.0
offset_right = 100.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
text = "COLLAPSE!"
horizontal_alignment = 1
vertical_alignment = 1
